--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "frontend",
+  "name": "patentai-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://patentai.vercel.app",
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
