--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,12 @@
-fastapi>=0.109.0
-uvicorn>=0.27.0
-requests>=2.31.0
-python-dotenv>=1.0.0
-sentence-transformers>=2.2.2
-numpy>=1.26.0
-scikit-learn>=1.4.0
-pydantic>=2.6.0 
+fastapi==0.68.1
+uvicorn==0.15.0
+python-dotenv==0.19.0
+requests==2.26.0
+sentence-transformers==2.2.2
+torch==1.9.0
+transformers==4.30.2
+pandas==1.3.3
+numpy==1.21.2
+sqlite3
+pydantic==1.8.2
+python-multipart==0.0.5 
